# watson-speech-to-text-converter

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: ci.yaml
deploy/: 010-Credentials.yaml  020-KnativeService.yaml  README.md  kafka-source.yaml  knative-service.yaml  kustomization.yaml
src/: error.rs  filter.rs  main.rs
