[package]
name = "watson-speech-to-text-converter"
version = "0.1.0"
authors = ["Jens Reimann <jreimann@redhat.com>"]
edition = "2018"

[dependencies]

actix-web = "3"
actix-cors = "0.5"

log = "0.4"
env_logger = "0.7"

serde = "1"
serde_json = "1"
envconfig = "0.9"
snafu = "0.6"

anyhow = "1"

reqwest = { version = "0.10", features = ["json"] }
url = "2"
mime = "0.3"

cloudevents-sdk = "0.3"
cloudevents-sdk-actix-web = "0.3"